# FileTran-Android

./: .gitignore  .tmp_HFFax.java  .tmp_Mode.java  .tmp_Robot_36_Color.java  .tmp_notificationcompat.java  HOTSPOT_DEBUG.md  README.md  THIRD_PARTY_NOTICES.md  gradle.properties  settings.gradle.kts
.tmp/: librespeed.js  librespeed_index.html  librespeed_worker.js  robot36_RGBModes.java
.tmp/InstallerX-Revived-main/: .gitignore  CONTRIBUTING.md  build.gradle.kts  gradle.properties  renovate.json  settings.gradle.kts
.tmp/InstallerX-Revived-main/.github/: bot.py
.tmp/InstallerX-Revived-main/app/: build.gradle.kts
.tmp/InstallerX-Revived-main/docs/: README.md  README_CN.md  README_DE.md  README_ES.md  README_JA.md
.tmp/InstallerX-Revived-main/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
.tmp/InstallerX-Revived-main/hidden-api/: build.gradle.kts
.tmp/InstallerX-Revived-main/website/: .gitignore  package-lock.json  package.json
.tmp/android-iperf-master/iperf-2.0.10/: Android.mk
.tmp/iperf-src/: configure_for_abi.sh
.tmp/iperf-src/iperf-2.2.1/: Android.mk  INSTALL  Makefile  config.h  config.h.in  (+3 more)
.tmp_robot36_src/robot36-2/: README.md  settings.gradle
_upstream/NextTraceroute/: LICENSE
airgap/: build.gradle.kts
airgap/src/main/cpp/: CMakeLists.txt  airgap_jni.cpp
airgap/src/main/cpp/cfc/cfc-cpp/: MultiThreadedDecoder.h
airgap/src/main/cpp/cfc/libcimbar/src/lib/cimbar_js/: cimbar_recv_js.cpp
app/: build.gradle.kts
app/release/: output-metadata.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+726 files in other folders)
